--- a/Template/index.html
+++ b/Template/index.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-3">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                        <a href="./index.html"><img src="img/dic2.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-9 col-md-9">
@@ -73,87 +73,51 @@
     <!-- Header Section End -->
 
     <!-- Hero Section Begin -->
-    <section class="hero set-bg" data-setbg="img/hero/hero-bg.jpg">
+    <section class="hero set-bg" data-setbg="img/hero/hero-bg2.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="hero__text">
                         <div class="section-title">
-                            <h2>Discover The Best Services Near You</h2>
-                            <p>1.118.940.376 The best service package is waiting for you</p>
+                            <h2>Digite a palavra que deja encontrar</h2>
+                            <p>Aumente seu vocabulário Inglês-Português</p>
                         </div>
-                        <div class="hero__search__form">
-                            <form action="#">
-                                <input type="text" placeholder="Search...">
-                                <div class="select__option">
-                                    <select>
-                                        <option value="">Choose Categories</option>
-                                    </select>
-                                </div>
-                                <div class="select__option">
-                                    <select>
-                                        <option value="">Choose Location</option>
-                                    </select>
-                                </div>
-                                <button type="submit">Explore Now</button>
-                            </form>
-                        </div>
-                        <ul class="hero__categories__tags">
-                            <li><a href="#"><img src="img/hero/cat-1.png" alt=""> Restaurent</a></li>
-                            <li><a href="#"><img src="img/hero/cat-2.png" alt=""> Food & Drink</a></li>
-                            <li><a href="#"><img src="img/hero/cat-3.png" alt=""> Shopping</a></li>
-                            <li><a href="#"><img src="img/hero/cat-4.png" alt=""> Beauty</a></li>
-                            <li><a href="#"><img src="img/hero/cat-5.png" alt=""> Hotels</a></li>
-                            <li><a href="#"><img src="img/hero/cat-6.png" alt=""> All Categories</a></li>
-                        </ul>
+
                     </div>
                 </div>
+
+                <div class="col-lg-12 d-flex justify-content-center">
+                    <div class="input-group input-group-lg col-8">
+                        <input type="text" class="form-control" placeholder=" " aria-label="Recipient's username" aria-describedby="basic-addon2">
+                        <div class="input-group-append">
+                            <button type="button" class="btn btn-danger">Pesquisar</button>
+                        </div>
+                    </div>
+                    </div>
+
             </div>
         </div>
     </section>
     <!-- Hero Section End -->
 
-    <!-- Categories Section Begin -->
+    <!-- Container da palavra -->
     <section class="categories spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>Most Popular Categories</h2>
-                        <p>Travelocity empowers travelers who are giving back on their trips in ways big and small</p>
-                    </div>
-                    <div class="categories__item__list">
-                        <div class="categories__item">
-                            <img src="img/categories/cat-1.png" alt="">
-                            <h5>Food & Drink</h5>
-                            <span>78 Listings</span>
-                        </div>
-                        <div class="categories__item">
-                            <img src="img/categories/cat-2.png" alt="">
-                            <h5>Restaurent</h5>
-                            <span>32 Listings</span>
-                        </div>
-                        <div class="categories__item">
-                            <img src="img/categories/cat-3.png" alt="">
-                            <h5>Hotels</h5>
-                            <span>16 Listings</span>
-                        </div>
-                        <div class="categories__item">
-                            <img src="img/categories/cat-4.png" alt="">
-                            <h5>Beauty & Spa</h5>
-                            <span>55 Listings</span>
-                        </div>
-                        <div class="categories__item">
-                            <img src="img/categories/cat-5.png" alt="">
-                            <h5>Shopping</h5>
-                            <span>23 Listings</span>
-                        </div>
-                    </div>
+                        <h2 class="text-align:left">Home <p>Substantivo (plural: Homes)</p></h2>  
+                        <h4 class="text-primary">Casa, Lar, lugar onde vive ou viveu</h4></br>
+                        <h5>Exemplos: "Deliver the package to my home| Entregre o pacote em minha casa"; "He stays home on weekends | Ele fica em casa nos fins de semana"</h5>
+                        <br>
+                        <h2 class="text-align:left">Home <p>Adjetivo (plural: Homes)</p></h2>  
+                        <h4 class="text-primary">Doméstico, Familiar</h4></br>
+                        <h5>Exemplos: "My home life is affecting my work | Minha vida doméstica está afetando meu trabalho."; "Children grow up happy in a healthy home environment | As crianças crescem felizes em um ambiente familiar saudável."</h5>
+
                 </div>
             </div>
         </div>
     </section>
-    <!-- Categories Section End -->
+    <!-- fim do container da palavra -->
 
     <!-- Most Search Section Begin -->
     <section class="most-search spad">
