--- a/Template/index.html
+++ b/Template/index.html
@@ -206,7 +206,7 @@
                                                 </ul>
                                             </div>
                                             <div class="listing__item__text__info">
-                                                <div class="p-3 mb-2 bg-warning text-white font-weight-bold">Intermediário</div>
+                                                <div class="p-3 mb-2 bg-info text-white font-weight-bold">Avançado</div>
                                             </div>
                                         </div>
                                     </div>
