--- a/Template/index.html
+++ b/Template/index.html
@@ -84,7 +84,8 @@
                     <div class="input-group input-group-lg col-8">
                         <input type="text" class="form-control" placeholder=" " aria-label="Recipient's username" aria-describedby="basic-addon2">
                         <div class="input-group-append">
-                            <button type="button" class="btn btn-danger"  type="button" onclick="Mudarestado('minhaDiv')">Pesquisar</button>
+                            <!--<button type="button" class="btn btn-danger"  type="button" onclick="Mudarestado('palavradiv')">Pesquisar</button>-->
+                            <a href="#palavradiv" class="btn btn-danger" type="button" onclick="Mudarestado('palavradiv')">Pesquisar</a>
                         </div>
                     </div>
                     </div>
@@ -107,7 +108,7 @@
 
     <!-- Container da palavra -->
     <section class="categories spad">
-        <div class="container" id="minhaDiv">
+        <div class="container" id="palavradiv">
             <div class="row">
                 <div class="col-lg-12">
                         <h2 class="text-align:left">Home <p>Substantivo (plural: Homes)</p></h2>  
